--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,7 +9,7 @@ $bp-larger-than-desktophd : "min-width: 1200px" !default;
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 
-$primary-color: #CE2832 !default;
+$primary-color: #D65931 !default;
 $brand-color: $primary-color;
 
 $light-grey: #e1e1e1 !default;
