--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,18 @@
   {% include head.html %}
 
   <body>
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {% include header.html %}
-        {{ content }}
-      </div>
-    </main>
+    {% include sidebar.html %}
+    <div class="wrap">
+      <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+      <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+          {% include header.html %}
+          {{ content }}
+        </div>
+      </main>
 
-    {%- include footer.html -%}
+      {%- include footer.html -%}
+    </div>
 
   </body>
 
