--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,11 @@ layout: default
 <article id="single-post" class="post">
   <div class="post-content">
     <header class="post-header">
-      <h1 class="post-title" itemprop="name headline">
+      <h2 class="post-title" itemprop="name headline">
         {{ page.title }}
-      </h1>
+      </h2>
       <p class="talk-date">
-        by {{ page.speaker}} {% if page.time %}
+        {% if page.speaker %}by {{ page.speaker}} {% endif %}{% if page.time %}
         <br>
         on {{ page.time | date : "%B %-d, %Y"}} {% endif %}
       </p>
@@ -18,7 +18,7 @@ layout: default
       {{ content }}
     </article>
 
-    <div class="about-speaker">
+    <!-- <div class="about-speaker">
       <h4>About {{ page.speaker}}</h4>
       <p>{{ page.bio}}</p>
 
@@ -27,7 +27,7 @@ layout: default
       {%- if page.twitter -%}
         <a href="https://twitter.com/{{ page.twitter | cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#twitter' | relative_url }}"></use></svg> <span class="username">{{ page.twitter | escape }}</span></a>
       {%- endif -%}
-    </div>
+    </div> -->
 
   </div>
 </article>
