sidebar links and title link to home

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
 
   const substantifs = ["la Forge", "Le Cercle", "la Congregation", "la Coterie", "le Ministère", "l'Agence", "le Bureau", "le Secrétariat", "le Cabinet", "la Commission", "le Comité", "le Tribunal", "la Maison", "le Bazar", "la Société", "l'Atelier", "le Collége", "l'Institut" ]
 
-  document.querySelector("#site-header h1 a").onclick = function(e){
+  document.querySelector("#site-header h1 a").onmouseover = function(e){
     e.preventDefault()
     changeSubstantif()
   }
