--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
 
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>{{ site.description }}</p>
+    <p>{{ site.title }}</p>
   </div>
 
   <nav class="sidebar-nav">
