--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header id="site-header">
-  <h1>
-    <a href="/">{{ site.title }}</a>
-  </h1>
-
+  <div class="wrapper">
+    <h1>
+      <a href="/">{{ site.title }}</a>
+    </h1>
+  </div>
 </header>
 
 <script>
