--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -100,13 +100,15 @@ a {
   color: $brand-color;
   text-decoration: none;
 
+  -webkit-transition: 0.8s;
+  transition: 0.8s;
+
   &:visited {
     color: darken($brand-color, 15%);
   }
 
-  &:hover {
+  &:hover, &:visited:hover {
     color: $text-color;
-    text-decoration: underline;
   }
 
   .social-media-list &:hover {
