--- a/_includes/headshot.html
+++ b/_includes/headshot.html
@@ -1,6 +1,6 @@
 <div class="people">
     <div class="headshot">
-        <img class="" src="{{ people.img }}" alt="Image {{ people.name }}" name="{{ people.name }}">
+        <img class="circular" src="{{ people.img }}" alt="Image {{ people.name }}" name="{{ people.name }}">
     </div>
     <div class="people-info">
       <h3>
