--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@
 @import "variables";
 @import "base";
 @import "grid";
+@import "fonts";
 @import "typebase";
 @import "layout";
 @import "sidebar";
