add mt Charreyre

--- a/_includes/headshot.html
+++ b/_includes/headshot.html
@@ -4,9 +4,13 @@
     </div>
     <div class="people-info">
       <h3>
+        {% if people.url %}
         <a class="people-link" href="{{people.url}}">
           {{people.name}}
         </a>
+        {% else %}
+        {{people.name}}
+        {% endif %}
       </h3>
       <p class="people-bio">
         {{ people.bio }}
