--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,14 @@
     {% include sidebar.html %}
     <div class="wrap">
       <div class="sidebar-toggle-wrapper">
-        <label for="sidebar-checkbox" class="sidebar-toggle"><span class="dot"></span></label>
+        <label for="sidebar-checkbox" class="sidebar-toggle">
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="34px" height="27px" viewBox="0 0 34 27" enable-background="new 0 0 34 27" xml:space="preserve" transform="scale(.8)">
+            <rect fill="#FFFFFF" width="34" height="4"/>
+            <rect y="11" fill="#FFFFFF" width="34" height="4"/>
+            <rect y="23" fill="#FFFFFF" width="34" height="4"/>
+          </svg>
+          <span>×</span>
+        </label>
       </div>
       {% include header.html %}
       <main class="page-content" aria-label="Content">
