--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -84,20 +84,21 @@ a.sidebar-nav-item:focus {
 }
 /* Style the `label` that we use to target the `.sidebar-checkbox` */
 .sidebar-toggle {
-  background-color: #fff;
-  border-bottom: 3px solid $primary-color;
-  .dot {
-    background-color: $primary-color;
-  }
+  background-color: $primary-color;
   position: sticky;
-  top:  0;
+  top: 0;
   left: 0;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   display: block;
   padding: .5rem .65rem;
-  border-radius: 0 0 50px 0;
   cursor: pointer;
+  svg {
+    margin: .8em 0 0 .5em;
+  }
+  &>span{
+    display:none;
+  }
 }
 // .sidebar-toggle:before {
 //   display: block;
@@ -116,9 +117,16 @@ a.sidebar-nav-item:focus {
 .sidebar-toggle:active,
 #sidebar-checkbox:checked ~ .wrap .sidebar-toggle {
   background-color: $primary-color;
-  border-color: #fff;
-  .dot {
-    background-color: #fff;
+  color: #fff;
+  svg {
+    display:none;
+  }
+
+  &>span{
+    display:block;
+    margin: .2em 0 0 .2em;
+    font-size:40px;
+    line-height:40px;
   }
 }
 
