--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="site-header">
-  <h3>
+  <h3 class="site-header-title">
     <a href="/">{{ site.title }}</a>
   </h3>
 </header>
@@ -8,13 +8,13 @@
 
   const substantifs = ["la Forge", "Le Cercle", "la Congrégation", "la Coterie", "le Ministère", "l'Agence", "le Bureau", "le Secrétariat", "le Cabinet", "la Commission", "le Comité", "le Tribunal", "la Maison", "le Bazar", "la Société", "l'Atelier", "le Collége", "l'Institut", "la Cellule" ]
 
-  document.querySelector("#site-header h1 a").onmouseover = function(e){
+  document.querySelector("#site-header .site-header-title a").onmouseover = function(e){
     e.preventDefault()
     changeSubstantif()
   }
 
-  document.querySelector("#site-header h1 a").onmouseout = function(e){
-    document.querySelector("#site-header h1 a").innerHTML = "{{ site.title }}"
+  document.querySelector("#site-header .site-header-title a").onmouseout = function(e){
+    document.querySelector("#site-header .site-header-title a").innerHTML = "{{ site.title }}"
   }
 
   function changeSubstantif() {
@@ -22,7 +22,7 @@
 
     const title = "NAME des Questions Simples".replace("NAME", capitalizeFirstLetter(replacement))
 
-    document.querySelector("#site-header h1 a").innerHTML = title
+    document.querySelector("#site-header .site-header-title a").innerHTML = title
   }
 
   function capitalizeFirstLetter(string) {
