--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -86,12 +86,14 @@ a.sidebar-nav-item:focus {
 .sidebar-toggle {
   background-color: $primary-color;
   position: sticky;
-  top: 0;
+  top: -.5em;
   left: 0;
-  width: 30px;
-  height: 30px;
   display: block;
+  width: 60px;
+  height: 60px;
+  border-radius: 0 0 80px 0;
   padding: .5rem .65rem;
+
   cursor: pointer;
   svg {
     margin: .8em 0 0 .5em;
