add posts & news on homepage

--- a/_includes/questions.html
+++ b/_includes/questions.html
@@ -19,7 +19,7 @@
     if (i < qs.length -1) i++
     else i = 0
     qs[i].style.opacity = 1
-    qs[i].style.height = "15em"
+    qs[i].style.height = "auto"
   }
 
   nextQuestion() // show first question
