--- a/css/main.scss
+++ b/css/main.scss
@@ -212,3 +212,42 @@ $circle_size: 100px;
     line-height: 1.5em;
   }
 }
+
+.posts-list {
+  list-style: none;
+
+  display: flex;
+  flex-direction: row;
+  flex-flow: row;
+  flex-wrap: wrap;
+
+  margin: 0;
+
+  .thumbnail-img {
+    width: 100%;
+    height: 200px;
+    background-position: center;
+    background-size: 100%;
+  }
+  .post-meta {
+    margin-top: .5em;
+    font-size: .8em;
+    text-transform: uppercase;
+  }
+  .post-title {
+    margin: 0;
+  }
+  li {
+    width: 300px;
+    margin: 0 1em 1em 0;
+    display: block;
+
+    img {
+      max-width: 100%;
+      height: 300px
+    }
+  }
+
+
+
+}
