--- a/_includes/questions.html
+++ b/_includes/questions.html
@@ -1,5 +1,5 @@
 <ul class="questions">
-  {% for q in site.data.questions %}
+  {% for q in site.data.questions.questions %}
     <li class="question" style="overflow: hidden; height:0; opacity:0">
       <h3>{{q}}</h3>
     </li>
