--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
   <nav class="sidebar-nav">
     <a class='sidebar-nav-item{% if page.title == "" %} active{% endif %}' href="/">Home</a>
     <a class='sidebar-nav-item{% if page.title contains "Actualités" %} active{% endif %}' href="/posts">Actualités</a>
-    <a class='sidebar-nav-item{% if page.title contains "Charte" %} active{% endif %}' href="/people.html">La Charte</a>
+    <a class='sidebar-nav-item{% if page.title contains "Charte" %} active{% endif %}' href="/charte.html">La Charte</a>
     <a class='sidebar-nav-item{% if page.title contains "Équipe" %} active{% endif %}' href="/people.html">L'Équipe</a>
 
     {% comment %}
